--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "@ragestudio/nodecorejs": "^0.14.7",
     "serve-handler": "^6.1.3"
+  },
+  "devDependencies": {
+    "pkg": "^4.4.9"
   }
 }
